1270 Mobile: prevent scroll bar showing when there's no overflow

--- a/themes/custom/bootstrap_tcs/sass/custom/_main.scss
+++ b/themes/custom/bootstrap_tcs/sass/custom/_main.scss
@@ -66,7 +66,7 @@
 
   }
 
-  /* Sidebar trigger */
+  /* Sidebar Trigger */
   #boxes-box-tcs_content_side_trigger {
     button { 
       font-size: 0.9em; 
@@ -81,6 +81,10 @@
       display: none;
     }
   }
+}
+
+.region-sidebar-first {
+  overflow-y: auto;
 }
 
 /* JS-specific */
